--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ch-videojs-quality-picker",
   "author": {
-    "name": "Streamroot",
-    "email": "contact@streamroot.io"
+    "name": "gaithoben",
+    "email": "gaithoben@gmail.com"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
